@@ -6,6 +6,7 @@ Version 5.0.6
   Bug #27253 Installer : Company info is different 
   Bug #27187 cmd.Parameters.RemoveAt("Id") will cause an error if the last item is requested   
   Bug #27093 Exception when using large values in IN UInt64 parameters 
+  Bug #27221 describe SQL command returns all byte array on MySQL versions older than 4.1.15 
   
 Version 5.0.5 3/5/2007
 
